--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,6 +20,12 @@ security:
                 check_path: /api/login
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+                
+        create_user:
+            pattern: ^/api/users/create
+            stateless: true
+            security: false  # Разрешить доступ без аутентификации
+            
         api:
             pattern: ^/api
             stateless: true
@@ -34,8 +40,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+         - { path: ^/api/users/create, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
 
 when@test:
     security:
